test: add test for target deletion from workflow
